infra/k8s/base/cashflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashflow-api
  namespace: arch-challenge
  labels:
    app.kubernetes.io/name: cashflow-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cashflow-platform
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: cashflow-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cashflow-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: cashflow-platform
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 1654
      containers:
        - name: cashflow-api
          image: cashflow-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
